package v1

import (
	"context"
	"fmt"
	"io"

	"github.com/containerd/nerdctl-grpc-server/internal/config"
	"github.com/containerd/nerdctl-grpc-server/internal/interfaces"
	"github.com/containerd/nerdctl-grpc-server/pkg/types"
	"github.com/sirupsen/logrus"
)

// V1ImageManager implements the ImageManager interface for nerdctl v1.x
type V1ImageManager struct {
	executor *V1CommandExecutor
	config   *config.Config
	logger   *logrus.Logger
}

func NewV1ImageManager(executor *V1CommandExecutor, config *config.Config, logger *logrus.Logger) (*V1ImageManager, error) {
	return &V1ImageManager{
		executor: executor,
		config:   config,
		logger:   logger.WithField("component", "v1-image-manager"),
	}, nil
}

// Implement key methods with v1-specific logic
func (m *V1ImageManager) PullImage(ctx context.Context, req *types.PullImageRequest) (*types.PullImageResponse, error) {
	m.logger.WithField("image", req.ImageName).Info("Pulling image with v1 adapter")
	
	args := []string{"pull"}
	
	if req.Platform != "" {
		args = append(args, "--platform", req.Platform)
	}
	if req.AllTags {
		args = append(args, "--all-tags")
	}
	if req.Quiet {
		args = append(args, "--quiet")
	}
	
	args = append(args, req.ImageName)
	if req.Tag != "" {
		args = append(args, req.Tag)
	}
	
	result, err := m.executor.Execute(ctx, args)
	if err != nil {
		return nil, fmt.Errorf("failed to pull image: %w", err)
	}
	
	if result.ExitCode != 0 {
		return nil, fmt.Errorf("pull command failed: %s", result.Stderr)
	}
	
	return &types.PullImageResponse{
		ImageID: req.ImageName, // v1.x may not return specific image ID
	}, nil
}

func (m *V1ImageManager) ListImages(ctx context.Context, req *types.ListImagesRequest) (*types.ListImagesResponse, error) {
	args := []string{"images", "--format", "json"}
	
	if req.All {
		args = append(args, "--all")
	}
	if req.Digests {
		args = append(args, "--digests")
	}
	
	result, err := m.executor.Execute(ctx, args)
	if err != nil {
		return nil, fmt.Errorf("failed to list images: %w", err)
	}
	
	if result.ExitCode != 0 {
		return nil, fmt.Errorf("list command failed: %s", result.Stderr)
	}
	
	// Parse and convert images (simplified)
	return &types.ListImagesResponse{
		Images: []types.ImageInfo{}, // Placeholder
	}, nil
}

// Stub implementations for remaining methods
func (m *V1ImageManager) PushImage(ctx context.Context, req *types.PushImageRequest) (*types.PushImageResponse, error) {
	return nil, fmt.Errorf("v1 push image: not implemented in example")
}

func (m *V1ImageManager) BuildImage(ctx context.Context, req *types.BuildImageRequest) (*types.BuildImageResponse, error) {
	return nil, fmt.Errorf("v1 build image: not implemented in example")
}

func (m *V1ImageManager) InspectImage(ctx context.Context, req *types.InspectImageRequest) (*types.InspectImageResponse, error) {
	return nil, fmt.Errorf("v1 inspect image: not implemented in example")
}

func (m *V1ImageManager) RemoveImage(ctx context.Context, req *types.RemoveImageRequest) (*types.RemoveImageResponse, error) {
	return nil, fmt.Errorf("v1 remove image: not implemented in example")
}

func (m *V1ImageManager) TagImage(ctx context.Context, req *types.TagImageRequest) (*types.TagImageResponse, error) {
	return nil, fmt.Errorf("v1 tag image: not implemented in example")
}

func (m *V1ImageManager) SaveImage(ctx context.Context, req *types.SaveImageRequest) (io.ReadCloser, error) {
	return nil, fmt.Errorf("v1 save image: not implemented in example")
}

func (m *V1ImageManager) LoadImage(ctx context.Context, req *types.LoadImageRequest, data io.Reader) (*types.LoadImageResponse, error) {
	return nil, fmt.Errorf("v1 load image: not implemented in example")
}

func (m *V1ImageManager) ImportImage(ctx context.Context, req *types.ImportImageRequest, data io.Reader) (*types.ImportImageResponse, error) {
	return nil, fmt.Errorf("v1 import image: not implemented in example")
}

func (m *V1ImageManager) GetImageHistory(ctx context.Context, req *types.GetImageHistoryRequest) (*types.GetImageHistoryResponse, error) {
	return nil, fmt.Errorf("v1 image history: not implemented in example")
}

func (m *V1ImageManager) PruneImages(ctx context.Context, req *types.PruneImagesRequest) (*types.PruneImagesResponse, error) {
	return nil, fmt.Errorf("v1 prune images: not implemented in example")
}

func (m *V1ImageManager) GetVersion(ctx context.Context) (*types.VersionInfo, error) {
	versionInfo := m.executor.GetVersion()
	return &types.VersionInfo{
		Version: versionInfo.Client.Raw,
	}, nil
}

// V1NetworkManager implements the NetworkManager interface for nerdctl v1.x
type V1NetworkManager struct {
	executor *V1CommandExecutor
	config   *config.Config
	logger   *logrus.Logger
}

func NewV1NetworkManager(executor *V1CommandExecutor, config *config.Config, logger *logrus.Logger) (*V1NetworkManager, error) {
	return &V1NetworkManager{
		executor: executor,
		config:   config,
		logger:   logger.WithField("component", "v1-network-manager"),
	}, nil
}

func (m *V1NetworkManager) CreateNetwork(ctx context.Context, req *types.CreateNetworkRequest) (*types.CreateNetworkResponse, error) {
	args := []string{"network", "create"}
	
	if req.Driver != "" {
		args = append(args, "--driver", req.Driver)
	}
	
	args = append(args, req.Name)
	
	result, err := m.executor.Execute(ctx, args)
	if err != nil {
		return nil, fmt.Errorf("failed to create network: %w", err)
	}
	
	if result.ExitCode != 0 {
		return nil, fmt.Errorf("create network failed: %s", result.Stderr)
	}
	
	return &types.CreateNetworkResponse{
		NetworkID: req.Name, // v1.x may not return specific network ID
	}, nil
}

// Stub implementations for remaining network methods
func (m *V1NetworkManager) RemoveNetwork(ctx context.Context, req *types.RemoveNetworkRequest) (*types.RemoveNetworkResponse, error) {
	return nil, fmt.Errorf("v1 remove network: not implemented in example")
}

func (m *V1NetworkManager) ListNetworks(ctx context.Context, req *types.ListNetworksRequest) (*types.ListNetworksResponse, error) {
	return nil, fmt.Errorf("v1 list networks: not implemented in example")
}

func (m *V1NetworkManager) InspectNetwork(ctx context.Context, req *types.InspectNetworkRequest) (*types.InspectNetworkResponse, error) {
	return nil, fmt.Errorf("v1 inspect network: not implemented in example")
}

func (m *V1NetworkManager) ConnectContainerToNetwork(ctx context.Context, req *types.ConnectContainerToNetworkRequest) (*types.ConnectContainerToNetworkResponse, error) {
	return nil, fmt.Errorf("v1 connect container to network: not implemented in example")
}

func (m *V1NetworkManager) DisconnectContainerFromNetwork(ctx context.Context, req *types.DisconnectContainerFromNetworkRequest) (*types.DisconnectContainerFromNetworkResponse, error) {
	return nil, fmt.Errorf("v1 disconnect container from network: not implemented in example")
}

func (m *V1NetworkManager) PruneNetworks(ctx context.Context, req *types.PruneNetworksRequest) (*types.PruneNetworksResponse, error) {
	return nil, fmt.Errorf("v1 prune networks: not implemented in example")
}

func (m *V1NetworkManager) GetVersion(ctx context.Context) (*types.VersionInfo, error) {
	versionInfo := m.executor.GetVersion()
	return &types.VersionInfo{
		Version: versionInfo.Client.Raw,
	}, nil
}

// V1VolumeManager implements the VolumeManager interface for nerdctl v1.x
type V1VolumeManager struct {
	executor *V1CommandExecutor
	config   *config.Config
	logger   *logrus.Logger
}

func NewV1VolumeManager(executor *V1CommandExecutor, config *config.Config, logger *logrus.Logger) (*V1VolumeManager, error) {
	return &V1VolumeManager{
		executor: executor,
		config:   config,
		logger:   logger.WithField("component", "v1-volume-manager"),
	}, nil
}

// Stub implementations for volume methods
func (m *V1VolumeManager) CreateVolume(ctx context.Context, req *types.CreateVolumeRequest) (*types.CreateVolumeResponse, error) {
	return nil, fmt.Errorf("v1 create volume: not implemented in example")
}

func (m *V1VolumeManager) RemoveVolume(ctx context.Context, req *types.RemoveVolumeRequest) (*types.RemoveVolumeResponse, error) {
	return nil, fmt.Errorf("v1 remove volume: not implemented in example")
}

func (m *V1VolumeManager) ListVolumes(ctx context.Context, req *types.ListVolumesRequest) (*types.ListVolumesResponse, error) {
	return nil, fmt.Errorf("v1 list volumes: not implemented in example")
}

func (m *V1VolumeManager) InspectVolume(ctx context.Context, req *types.InspectVolumeRequest) (*types.InspectVolumeResponse, error) {
	return nil, fmt.Errorf("v1 inspect volume: not implemented in example")
}

func (m *V1VolumeManager) PruneVolumes(ctx context.Context, req *types.PruneVolumesRequest) (*types.PruneVolumesResponse, error) {
	return nil, fmt.Errorf("v1 prune volumes: not implemented in example")
}

func (m *V1VolumeManager) GetVersion(ctx context.Context) (*types.VersionInfo, error) {
	versionInfo := m.executor.GetVersion()
	return &types.VersionInfo{
		Version: versionInfo.Client.Raw,
	}, nil
}

// V1ComposeManager implements the ComposeManager interface for nerdctl v1.x
type V1ComposeManager struct {
	executor *V1CommandExecutor
	config   *config.Config
	logger   *logrus.Logger
}

func NewV1ComposeManager(executor *V1CommandExecutor, config *config.Config, logger *logrus.Logger) (*V1ComposeManager, error) {
	return &V1ComposeManager{
		executor: executor,
		config:   config,
		logger:   logger.WithField("component", "v1-compose-manager"),
	}, nil
}

// Stub implementations for compose methods
func (m *V1ComposeManager) ComposeUp(ctx context.Context, req *types.ComposeUpRequest) (*types.ComposeUpResponse, error) {
	return nil, fmt.Errorf("v1 compose up: not implemented in example")
}

func (m *V1ComposeManager) ComposeDown(ctx context.Context, req *types.ComposeDownRequest) (*types.ComposeDownResponse, error) {
	return nil, fmt.Errorf("v1 compose down: not implemented in example")
}

func (m *V1ComposeManager) ComposeBuild(ctx context.Context, req *types.ComposeBuildRequest) (*types.ComposeBuildResponse, error) {
	return nil, fmt.Errorf("v1 compose build: not implemented in example")
}

func (m *V1ComposeManager) ComposePs(ctx context.Context, req *types.ComposePsRequest) (*types.ComposePsResponse, error) {
	return nil, fmt.Errorf("v1 compose ps: not implemented in example")
}

func (m *V1ComposeManager) ComposeLogs(ctx context.Context, req *types.ComposeLogsRequest) (<-chan *types.LogEntry, error) {
	return nil, fmt.Errorf("v1 compose logs: not implemented in example")
}

func (m *V1ComposeManager) GetVersion(ctx context.Context) (*types.VersionInfo, error) {
	versionInfo := m.executor.GetVersion()
	return &types.VersionInfo{
		Version: versionInfo.Client.Raw,
	}, nil
}

// V1SystemManager implements the SystemManager interface for nerdctl v1.x
type V1SystemManager struct {
	executor *V1CommandExecutor
	config   *config.Config
	logger   *logrus.Logger
}

func NewV1SystemManager(executor *V1CommandExecutor, config *config.Config, logger *logrus.Logger) (*V1SystemManager, error) {
	return &V1SystemManager{
		executor: executor,
		config:   config,
		logger:   logger.WithField("component", "v1-system-manager"),
	}, nil
}

func (m *V1SystemManager) GetSystemInfo(ctx context.Context, req *types.GetSystemInfoRequest) (*types.GetSystemInfoResponse, error) {
	args := []string{"info", "--format", "json"}
	
	result, err := m.executor.Execute(ctx, args)
	if err != nil {
		return nil, fmt.Errorf("failed to get system info: %w", err)
	}
	
	if result.ExitCode != 0 {
		return nil, fmt.Errorf("info command failed: %s", result.Stderr)
	}
	
	return &types.GetSystemInfoResponse{
		Version: m.executor.GetVersion().Client.Raw,
		Info:    result.Stdout, // Simplified
	}, nil
}

// Stub implementations for remaining system methods
func (m *V1SystemManager) GetSystemEvents(ctx context.Context, req *types.GetSystemEventsRequest) (<-chan *types.SystemEvent, error) {
	return nil, fmt.Errorf("v1 system events: not implemented in example")
}

func (m *V1SystemManager) PruneSystem(ctx context.Context, req *types.PruneSystemRequest) (*types.PruneSystemResponse, error) {
	return nil, fmt.Errorf("v1 system prune: not implemented in example")
}

func (m *V1SystemManager) GetVersion(ctx context.Context) (*types.VersionInfo, error) {
	versionInfo := m.executor.GetVersion()
	return &types.VersionInfo{
		Version: versionInfo.Client.Raw,
	}, nil
}